--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -1,7 +1,14 @@
+@import 'variables';
+
 @mixin common-list($horizontal: true, $style-type: none) {
 	list-style-type: $style-type;
 	@if($horizontal == true) {
 		display: flex;
 		align-items: center;
 	}
+}
+
+@mixin headers {
+	font-weight: 200;
+	color: lighten($primary-text, 15%);
 }
