--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,8 @@ body {
       color: #595959;
       width: 80vw;
       margin-bottom: 0px;
+      margin-top: 20px;
       min-width: 200px;
-      font-size: 60px;
       transform: translateY(0px);
       opacity: 0;
       text-align: center;
@@ -57,7 +57,8 @@ body {
     opacity: 1; } }
 
 .animate-header-1 {
-  animation: drop-1 0.8s linear 0s 1 forwards; }
+  animation: drop-1 0.7s linear 0s 1 forwards;
+  font-size: 60px; }
 
 @keyframes drop-2 {
   0% {
@@ -68,7 +69,8 @@ body {
     opacity: 1; } }
 
 .animate-header-2 {
-  animation: drop-2 0.8s linear 1.8s 1 forwards; }
+  animation: drop-2 0.7s linear 1.7s 1 forwards;
+  font-size: 55px; }
 
 @keyframes drop-3 {
   0% {
@@ -79,4 +81,17 @@ body {
     opacity: 1; } }
 
 .animate-header-3 {
-  animation: drop-3 0.8s linear 3.6s 1 forwards; }
+  animation: drop-3 0.7s linear 3.4s 1 forwards;
+  font-size: 50px; }
+
+@keyframes drop-4 {
+  0% {
+    transform: translateY(16vh);
+    opacity: 0; }
+  100% {
+    transform: translateY(15vh);
+    opacity: 1; } }
+
+.animate-header-4 {
+  animation: drop-4 0.7s linear 5.1s 1 forwards;
+  font-size: 45px; }
