--- a/sass/style.scss
+++ b/sass/style.scss
@@ -71,14 +71,23 @@ body {
     }
   }
   .animate-header-#{$h} {
-    animation: drop-#{$h}
-      $header-transition-duration
-      linear
-      $header-transition-duration *
-      ($h - 1) +
-      $delay
-      1
-      forwards;
+	//   animation: name duration timing-function delay iteration-count direction fill-mode;
+	animation: {
+		name: drop-#{$h};
+		duration: $header-transition-duration;
+		timing-function: linear;
+		delay: $header-transition-duration *($h - 1) + $delay;
+		iteration-count: 1;
+		fill-mode: forwards;
+	};
+    // animation: drop-#{$h}
+    //   $header-transition-duration
+    //   linear
+    //   $header-transition-duration *
+    //   ($h - 1) +
+    //   $delay
+    //   1
+    //   forwards;
 
 	  font-size: 60px - ($delay * 5);
   }
